--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.host.url=http://35.239.147.230:9000/
-sonar.projectKey=halloween
+sonar.host.url=https://sonarqube.ektechsoftwaresolution.com/
+sonar.projectKey=dylan-test
+sonar.projectname=dylan-test
 sonar.sources=./halloweens
-sonar.login=f9cf8ba4ab5a709ebf1a35bb2c952e79f506b234
 sonar.projectVersion=1.0.0
